[build-system]
requires = [
    "setuptools>=61",
    "setuptools_scm[toml]>=6.2",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "ax253"
description = "Experimental pure python ax25 stack."
authors = [
    {name = "Masen Furer KF7HVM", email = "kf7hvm@0x26.net"},
]
dependencies = [
    "attrs > 20",
    "bitarray > 2.5.0",
    "importlib-metadata >= 1.4",
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Communications :: Ham Radio",
    "Programming Language :: Python",
    "License :: OSI Approved :: Apache Software License"
]
keywords=[
    'Ham Radio', 'APRS', 'ax.25'
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/python-aprs/ax253"

[tool.setuptools_scm]